# algoritmit-ai-harjoitusty-

./: .coverage  .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py
src/algoritmit/: dijkstra.py  jps.py
src/kartta/: kartta.py
src/komponentit/: jpssolmut.py  kaaret.py  solmut.py
src/main/: main.py  tila.py
src/tapahtumat/: tapahtumat.py
src/testit/: dijkstra_test.py  jps_test.py  kartta_test.py  main_test.py  solmut_test.py  tapahtumat_test.py  tila_test.py
