[tool.poetry]
name = "algoritmit-ai-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Thomas Grundstrom <thomas.grundstrom@helsinki.fi>"]
readme = "README.md"
packages = [{include = "algoritmit_ai_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"
pygame = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
